# hacky

./: .gitignore  CMakeLists.txt
src/: BigInt.cpp  BigInt.h
tests/: BigInt_test.cpp  test.cpp
